fix some bug in type