@@ -19,6 +19,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -110,7 +111,7 @@ public class TypeServiceimplement implements TypeService {
     @Override
     public TypeResponse get_type(Long id) {
         Type res = findbyid(id);
-        return typeMapper.typeParentResponse2(res);
+        return typeMapper.typeParentResponse_with_date_and_parent(res);
     }
 
     /**
@@ -124,6 +125,21 @@ public class TypeServiceimplement implements TypeService {
     public TypeResponse get_type_detail(Long id) {
         Type res = findbyid(id);
         List<Type> list = typeRepository.findAllByParentAndIsDeletedIsNull(res);
+        if (!list.isEmpty()) {
+            return typeMapper.typeParentResponse(res, list);
+        }
+        return typeMapper.typeParentResponse(res);
+    }
+    /**
+     * Récupère les détails d'un type suprimee avec ses enfants.
+     *
+     * @param id Identifiant du type à récupérer.
+     * @return TypeResponse Détails du type avec ses enfants.
+     * @throws EntityNotFoundException Si le type avec l'ID spécifié n'est pas trouvé.
+     */
+    private TypeResponse get_type_detail_deleted(Long id) {
+        Type res = find_deleted_byid(id);
+        List<Type> list = typeRepository.findAllByParentAndIsDeletedNotNull(res);
         if (!list.isEmpty()) {
             return typeMapper.typeParentResponse(res, list);
         }
@@ -162,11 +178,11 @@ public class TypeServiceimplement implements TypeService {
     public TypeResponse activate_type(Long id) {
         Type type = findbyid(id);
         if (type.getActive()) {
-            throw new OperationNotPermittedException("Le type " + id + " a déjà été désactivé");
+            throw new OperationNotPermittedException("Le type " + id + " a déjà été activé");
         }
 
         type.setActive(true);
-        return typeMapper.typeParentResponse2(typeRepository.save(type));
+        return typeMapper.typeParentResponse_with_date_and_parent(typeRepository.save(type));
     }
 
     /**
@@ -180,7 +196,8 @@ public class TypeServiceimplement implements TypeService {
     @Override
     public TypeResponse toggle_type_detail(Long id, boolean activate) {
         Type type = findbyid(id);
-        return typeMapper.typeParentResponse(toggleTypeAndChildren(type, activate));
+        Type re=toggleTypeAndChildren(type, activate);
+        return this.get_type_all(re.getId());
     }
 
     /**
@@ -192,8 +209,8 @@ public class TypeServiceimplement implements TypeService {
     @Override
     @Transactional
     public TypeResponse add_type_detail(TypeRequest request) {
-        Long id = add_type(request, null).getId();
-        return get_type_detail(id);
+        Type type = add_type(request, null);
+        return this.get_type_detail(type.getId());
     }
 
     /**
@@ -220,9 +237,8 @@ public class TypeServiceimplement implements TypeService {
     @Transactional
     public TypeResponse update_type_detail(Long id, TypeRequest request) {
         Type type = updateType(id, request, null);
-        return typeMapper.typeParentResponse(findbyid(type.getId()));
+        return this.get_type_detail(type.getId());
     }
-
     /**
      * Supprime un type en le marquant comme supprimé, et supprime également ses enfants.
      *
@@ -234,7 +250,8 @@ public class TypeServiceimplement implements TypeService {
     @Transactional
     public TypeResponse delete_type_detail(Long id) {
         Type type = toggle_delete(id, true);
-        return typeMapper.typeParentResponse(findbyid(type.getId()));
+
+        return this.get_type_detail_deleted(type.getId());
     }
 
     /**
@@ -245,10 +262,12 @@ public class TypeServiceimplement implements TypeService {
      * @throws EntityNotFoundException Si le type avec l'ID spécifié n'est pas trouvé.
      */
     @Override
+    @Transactional
     public TypeResponse force_delete_type(Long id) {
         Type type = find_deleted_byid(id);
+        TypeResponse resp=this.get_type_detail_deleted(type.getId());
         deleteTypeAndChildren(type);
-        return typeMapper.typeParentResponse(type);
+        return resp;
     }
 
     /**
@@ -262,7 +281,7 @@ public class TypeServiceimplement implements TypeService {
     @Transactional
     public TypeResponse recovery_delete_all(Long id) {
         Type type = toggle_delete(id, false);
-        return typeMapper.typeParentResponse(findbyid(type.getId()));
+        return this.get_type_detail(type.getId());
     }
 
     /**
@@ -297,7 +316,7 @@ public class TypeServiceimplement implements TypeService {
      * @throws EntityNotFoundException Si le type avec l'ID spécifié n'est pas trouvé.
      */
     private Type toggle_delete(Long id, Boolean deleted) {
-        Type type = null;
+        Type type;
         if (deleted) {
             type = findbyid(id);
             if (type.getIsDeleted() != null) {
@@ -341,16 +360,16 @@ public class TypeServiceimplement implements TypeService {
      * @param request Requête contenant les détails du type à ajouter.
      * @param parent Type parent du nouveau type.
      * @return Type Le type ajouté.
-     * @throws IllegalArgumentException Si un type avec le même nom existe déjà ou si la profondeur dépasse deux niveaux.
+     * @throws OperationNotPermittedException Si un type avec le même nom existe déjà ou si la profondeur dépasse deux niveaux.
      */
     private Type add_type(TypeRequest request, Type parent) {
         Type type = typeRepository.findByNameAndIsDeletedIsNull(request.nom_type());
         if (type != null) {
-            throw new IllegalArgumentException("type avec nom " + type.getName() + " deja exists.");
+            throw new OperationNotPermittedException("type avec nom " + type.getName() + " deja exists.");
         }
         int depth = getDepth(parent);
         if (depth > 1) {
-            throw new IllegalArgumentException("La profondeur du type ne peut pas dépasser deux niveaux.");
+            throw new OperationNotPermittedException("La profondeur du type ne peut pas dépasser deux niveaux.");
         }
         type = Type.builder()
                 .name(request.nom_type())
@@ -435,7 +454,7 @@ public class TypeServiceimplement implements TypeService {
      * @return PageResponse<TypeResponse> Réponse paginée des types.
      */
     private PageResponse<TypeResponse> getTypeResponsePageResponse(Page<Type> respage) {
-        List<TypeResponse> res = respage.stream().map(typeMapper::typeParentResponse2).toList();
+        List<TypeResponse> res = respage.stream().map(typeMapper::typeParentResponse_with_date_and_parent).toList();
         return PageResponse.<TypeResponse>builder()
                 .content(res)
                 .number(respage.getNumber())
@@ -500,13 +519,16 @@ public class TypeServiceimplement implements TypeService {
      * @param parent Type parent du type mis à jour.
      * @return Type Le type mis à jour.
      * @throws EntityNotFoundException Si le type avec l'ID spécifié n'est pas trouvé.
-     * @throws IllegalArgumentException Si la profondeur du type dépasse deux niveaux.
+     * @throws OperationNotPermittedException Si la profondeur du type dépasse deux niveaux.
      */
     private Type updateType(Long typeId, TypeRequest request, Type parent) {
+        // Fetch the type by ID, ensuring it is not deleted
         Type type = typeRepository.findByIdAndIsDeletedIsNull(typeId);
         if (type == null) {
             throw new EntityNotFoundException("Type not found with id: " + typeId);
         }
+
+        // Update type fields if provided
         if (request.nom_type() != null && !request.nom_type().equals(type.getName())) {
             type.setName(request.nom_type());
         }
@@ -516,7 +538,7 @@ public class TypeServiceimplement implements TypeService {
         if (parent != null) {
             int depth = getDepth(parent);
             if (depth > 1) {
-                throw new IllegalArgumentException("La profondeur du type ne peut pas dépasser deux niveaux.");
+                throw new OperationNotPermittedException("La profondeur du type ne peut pas dépasser deux niveaux.");
             }
             type.setParent(parent);
         }
@@ -524,8 +546,11 @@ public class TypeServiceimplement implements TypeService {
         if (request.facteurs() != null) {
             List<Long> newFacteurIds = request.facteurs().stream()
                     .map(FacteurRequest::id)
-                    .toList();
-            List<Facteur> oldFacteurs = facteurRepository.findByTypeAndIdNotIn(type, newFacteurIds);
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+            List<Facteur> oldFacteurs = newFacteurIds.isEmpty()
+                    ? facteurRepository.findAllByTypeAndIsDeletedIsNull(type)
+                    : facteurRepository.findAllByTypeAndIdNotInAndIsDeletedNull(type, newFacteurIds);
             for (Facteur facteur : oldFacteurs) {
                 facteur.setIsDeleted(LocalDateTime.now());
                 facteurRepository.save(facteur);
@@ -537,15 +562,24 @@ public class TypeServiceimplement implements TypeService {
                     facteurService.addFacteur(i, type);
                 }
             }
+        } else {
+            List<Facteur> oldFacteurs = facteurRepository.findAllByTypeAndIsDeletedIsNull(type);
+            for (Facteur facteur : oldFacteurs) {
+                facteur.setIsDeleted(LocalDateTime.now());
+                facteurRepository.save(facteur);
+            }
         }
         if (request.types() != null) {
             List<Long> newTypeIds = request.types().stream()
                     .map(TypeRequest::id)
+                    .filter(Objects::nonNull)
                     .collect(Collectors.toList());
-            List<Type> oldTypes = typeRepository.findByParentAndIdNotIn(type, newTypeIds);
+
+            List<Type> oldTypes = typeRepository.findAllByParentAndIdNotIn(type, newTypeIds);
             for (Type oldType : oldTypes) {
-                typeRepository.delete(oldType);
+                this.delete_type_detail(oldType.getId());
             }
+
             for (TypeRequest childRequest : request.types()) {
                 if (childRequest.id() != null) {
                     updateType(childRequest.id(), childRequest, type);
@@ -558,8 +592,10 @@ public class TypeServiceimplement implements TypeService {
         if (shouldDeactivate) {
             deactivateChildrenAndFacteurs(type);
         }
+
         return type;
     }
+
 
     /**
      * Désactive les enfants et facteurs d'un type si nécessaire.
